update home price z score calculation

--- a/CapstoneProject/CapstoneProject.ipynb
+++ b/CapstoneProject/CapstoneProject.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean is  240927.088 and sd is  169428.242 \n",
       "ZipCode        93063     93065     93066  93067     93101     93103     93105  \\\n",
       "index                                                                           \n",
       "1996-04-30 -2.047494 -2.075972 -2.258279    NaN -2.251027 -2.272345 -2.347812   \n",
@@ -89,56 +88,95 @@
       "\n",
       "[5 rows x 125 columns]\n"
      ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'df11' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-a79e8a9590ab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf11\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#ALl Homes price\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m \u001b[0mpz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf11\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df11' is not defined"
-     ]
     }
    ],
    "source": [
-    "###load home price data into dataframe\n",
+    "''' Problem: Try to find which zipcode and in which months has its price increase sigificantly higher than the mean price with\n",
+    "the same zipcode and also than the rest of the zipcode. '''\n",
+    "\n",
+    "#load home price data into dataframe\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
     "from scipy import stats\n",
     "\n",
+    "#function for calculating moving average \n",
     "def movingaverage(interval, window_size):\n",
     "    window = np.ones(int(window_size))/float(window_size)\n",
     "    return np.convolve(interval, window, 'same')\n",
     "\n",
-    "df3 = pickle.load( open( \".\\DataPfiles\\90621_to_91024.p\", \"rb\" ) )\n",
+    "#load home price data from Datafiles\n",
     "df = pickle.load( open( \".\\DataPfiles\\93063_to_93524.p\", \"rb\" ) ) \n",
     "\n",
-    "t1 = df.iloc[:,1] \n",
-    "t2 = df3.iloc[:,0]\n",
-    "print \"mean is % 4.3F and sd is % 4.3F \" % (t1.mean(),t1.std())\n",
-    "\n",
-    "\n",
-    "###pivot All Homes prirce to row and grouped by zipcode\n",
+    "###pivot All Homes prirce to row and grouped them by zipcode\n",
     "df = df.reset_index()\n",
     "dfAllHomes = df.pivot(index='index', columns='ZipCode', values='All Homes')\n",
     "\n",
     "##loop through each zipcode column\n",
     "for x in dfAllHomes.columns:\n",
-    "    if sum(dfAllHomes[x].isnull()) > 0:\n",
-    "#         print x\n",
+    "    if sum(dfAllHomes[x].isnull()) > 0:  # if any month has null value, drop the entire zipcode\n",
     "        dfAllHomes.drop(x,axis=1)\n",
-    "    dfAllHomes[x] = movingaverage(dfAllHomes[x],3)  #don't use the first and last record of the moving average of 3..\n",
-    "#     print dfAllHomes[x].ix(1,:)  # try to remove the first record for each zip code..\n",
-    "#     dfAllHomes[x].iloc(-1,:).drop()\n",
+    "    dfAllHomes[x] = movingaverage(dfAllHomes[x],3)  #I will remove the first and last row; because value is wrong for moving average of 3 month centered in the middle of the month.\n",
     "    dfAllHomes[x] = (dfAllHomes[x] - dfAllHomes[x].mean()) / dfAllHomes[x].std()  #calculate z score for All Homes price each month\n",
     "\n",
     "print dfAllHomes.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 121333.33333333  181800.          181600.          181966.66666667\n",
+      "  121500.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### This cell as well as the cell after this one are just my playground to play with different functions.  This is not part of the project. \n",
     "\n",
     "\n",
-    "# add a new column for moving average of All Homes price\n",
+    "from pylab import plot, ylim, xlim, show, xlabel, ylabel\n",
+    "from numpy import linspace, loadtxt\n",
+    "import numpy as np\n",
+    "\n",
+    "r=3.0\n",
+    "\n",
+    "x = p.head()\n",
+    "y = pz\n",
+    "\n",
+    "def movingaverage(interval, window_size):\n",
+    "    window = np.ones(int(window_size))/float(window_size)\n",
+    "    return np.convolve(interval, window, 'same')\n",
+    "\n",
+    "# plot(x,y)\n",
+    "# xlim(0,1000)\n",
+    "\n",
+    "x_av = movingaverage(x, r)\n",
+    "# plot(x_av, y)\n",
+    "\n",
+    "# xlabel(\"Months since Jan 1749.\")\n",
+    "# ylabel(\"No. of Sun spots\")\n",
+    "# show()\n",
+    "print x_av\n",
+    "\n",
+    "p = df11.iloc[:,0]  #ALl Homes price\n",
+    "pz = df11.iloc[:,-1] \n",
+    "print pz\n",
+    "\n",
+    "\n",
+    "t1 = df.iloc[:,1] \n",
+    "t2 = df3.iloc[:,0]\n",
+    "print \"mean is % 4.3F and sd is % 4.3F \" % (t1.mean(),t1.std\n",
+    "                                            \n",
+    "                                            # add a new column for moving average of All Homes price\n",
     "\n",
     "\n",
     "p = df11.iloc[:,0] #ALl Homes price\n",
@@ -182,213 +220,8 @@
     "\n",
     "# df11['Moving Ave'] = movingaverage(df11.iloc[:,0], 3)  #para#1 is All Homes price; para#2 is numer of sample to gather centered in the middle\n",
     "\n",
-    "# df11.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1996-04-30    93063\n",
-      "1996-05-31    93063\n",
-      "1996-06-30    93063\n",
-      "1996-07-31    93063\n",
-      "1996-08-31    93063\n",
-      "1996-09-30    93063\n",
-      "1996-10-31    93063\n",
-      "1996-11-30    93063\n",
-      "1996-12-31    93063\n",
-      "1997-01-31    93063\n",
-      "1997-02-28    93063\n",
-      "1997-03-31    93063\n",
-      "1997-04-30    93063\n",
-      "1997-05-31    93063\n",
-      "1997-06-30    93063\n",
-      "1997-07-31    93063\n",
-      "1997-08-31    93063\n",
-      "1997-09-30    93063\n",
-      "1997-10-31    93063\n",
-      "1997-11-30    93063\n",
-      "1997-12-31    93063\n",
-      "1998-01-31    93063\n",
-      "1998-02-28    93063\n",
-      "1998-03-31    93063\n",
-      "1998-04-30    93063\n",
-      "1998-05-31    93063\n",
-      "1998-06-30    93063\n",
-      "1998-07-31    93063\n",
-      "1998-08-31    93063\n",
-      "1998-09-30    93063\n",
-      "              ...  \n",
-      "2011-01-31    93523\n",
-      "2011-02-28    93523\n",
-      "2011-03-31    93523\n",
-      "2011-04-30    93523\n",
-      "2011-05-31    93523\n",
-      "2011-06-30    93523\n",
-      "2011-07-31    93523\n",
-      "2011-08-31    93523\n",
-      "2011-09-30    93523\n",
-      "2011-10-31    93523\n",
-      "2011-11-30    93523\n",
-      "2011-12-31    93523\n",
-      "2012-01-31    93523\n",
-      "2012-02-29    93523\n",
-      "2012-03-31    93523\n",
-      "2012-04-30    93523\n",
-      "2012-05-31    93523\n",
-      "2012-06-30    93523\n",
-      "2012-07-31    93523\n",
-      "2012-08-31    93523\n",
-      "2012-09-30    93523\n",
-      "2012-10-31    93523\n",
-      "2012-11-30    93523\n",
-      "2012-12-31    93523\n",
-      "2013-02-28    93523\n",
-      "2013-03-31    93523\n",
-      "2013-04-30    93523\n",
-      "2014-06-30    93523\n",
-      "2015-03-31    93523\n",
-      "2015-06-30    93523\n",
-      "Name: ZipCode, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "p = df11.iloc[:,0]  #ALl Homes price\n",
-    "pz = df11.iloc[:,-1] \n",
-    "print pz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 121333.33333333  181800.          181600.          181966.66666667\n",
-      "  121500.        ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pylab import plot, ylim, xlim, show, xlabel, ylabel\n",
-    "from numpy import linspace, loadtxt\n",
-    "import numpy as np\n",
-    "\n",
-    "r=3.0\n",
-    "\n",
-    "x = p.head()\n",
-    "y = pz\n",
-    "\n",
-    "def movingaverage(interval, window_size):\n",
-    "    window = np.ones(int(window_size))/float(window_size)\n",
-    "    return np.convolve(interval, window, 'same')\n",
-    "\n",
-    "# plot(x,y)\n",
-    "# xlim(0,1000)\n",
-    "\n",
-    "x_av = movingaverage(x, r)\n",
-    "# plot(x_av, y)\n",
-    "\n",
-    "# xlabel(\"Months since Jan 1749.\")\n",
-    "# ylabel(\"No. of Sun spots\")\n",
-    "# show()\n",
-    "print x_av\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "index\n",
-      "1996-04-30   -1.562054\n",
-      "1996-05-31   -1.570189\n",
-      "1996-06-30   -1.571003\n",
-      "1996-07-31   -1.566935\n",
-      "1996-08-31   -1.561240\n",
-      "1996-09-30   -1.560427\n",
-      "1996-10-31   -1.564495\n",
-      "1996-11-30   -1.566935\n",
-      "1996-12-31   -1.568562\n",
-      "1997-01-31   -1.570189\n",
-      "1997-02-28   -1.573444\n",
-      "1997-03-31   -1.578325\n",
-      "1997-04-30   -1.583206\n",
-      "1997-05-31   -1.584020\n",
-      "1997-06-30   -1.584020\n",
-      "1997-07-31   -1.585647\n",
-      "1997-08-31   -1.586461\n",
-      "1997-09-30   -1.584020\n",
-      "1997-10-31   -1.577511\n",
-      "1997-11-30   -1.565308\n",
-      "1997-12-31   -1.549850\n",
-      "1998-01-31   -1.531952\n",
-      "1998-02-28   -1.513240\n",
-      "1998-03-31   -1.493715\n",
-      "1998-04-30   -1.475817\n",
-      "1998-05-31   -1.461986\n",
-      "1998-06-30   -1.455478\n",
-      "1998-07-31   -1.450597\n",
-      "1998-08-31   -1.439207\n",
-      "1998-09-30   -1.422936\n",
-      "                ...   \n",
-      "2013-01-31    0.151297\n",
-      "2013-02-28    0.182212\n",
-      "2013-03-31    0.231839\n",
-      "2013-04-30    0.286347\n",
-      "2013-05-31    0.339229\n",
-      "2013-06-30    0.395364\n",
-      "2013-07-31    0.451499\n",
-      "2013-08-31    0.492991\n",
-      "2013-09-30    0.534482\n",
-      "2013-10-31    0.588991\n",
-      "2013-11-30    0.648380\n",
-      "2013-12-31    0.687431\n",
-      "2014-01-31    0.697194\n",
-      "2014-02-28    0.694753\n",
-      "2014-03-31    0.707770\n",
-      "2014-04-30    0.728922\n",
-      "2014-05-31    0.748448\n",
-      "2014-06-30    0.763905\n",
-      "2014-07-31    0.778549\n",
-      "2014-08-31    0.794820\n",
-      "2014-09-30    0.812719\n",
-      "2014-10-31    0.826549\n",
-      "2014-11-30    0.843634\n",
-      "2014-12-31    0.856651\n",
-      "2015-01-31    0.861532\n",
-      "2015-02-28    0.870481\n",
-      "2015-03-31    0.885125\n",
-      "2015-04-30    0.891634\n",
-      "2015-05-31    0.881057\n",
-      "2015-06-30    0.885939\n",
-      "Name: 93063, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n"
+    "# df11.head()\n",
+    "                                            "
    ]
   }
  ],
