update capstone project with task list to work on

--- a/CapstoneProject/CapstoneProject.ipynb
+++ b/CapstoneProject/CapstoneProject.ipynb
@@ -419,8 +419,47 @@
     "# dfTargetZipCode.columns = ['TargetZipCode']\n",
     "# dfTargetZipCode['TargetZipCode'].sum() \n",
     "\n",
+    "### tasks to do\n",
+    "### process IRS dataaset\n",
+    "### process Census dataset\n",
+    "### process proximityone dataset\n",
+    "### apply training model to learn how IRS and Census dataset can predict target zipcodes\n",
+    "### evaluate and test model by breaking down into training data and test data\n",
+    "### apply feature scaling to dataset\n",
+    "### use PCA to combine some features e.g. I think I can combine all the home price for different number of bedrooms into one feature\n",
+    "### modify withinZipcode detection not to use z score, but just average monthly price increase over a certain percentage\n",
+    "### use F1 score and some other ways to evaluate the performance of the model\n",
+    "### apply visualization on data; add Google maps to show the results\n",
+    "### rewrite Storytelling\n",
     "\n",
-    "\n"
+    "###########process IRS dataset\n",
+    "### prepare IRS data\n",
+    "irsdata = pd.read_csv('./DataPfiles/98zp05ca.csv',header=4, na_values=['**','--'])\n",
+    "irsCol = ['ZipCode','NumberOfReturns','ExemptionsRtn','DepedentExemptionsAmt','AGI','SalariesWagesRtn','SalariesWagesAmt', \\\n",
+    "          'TaxableInterestRtn','TaxableInterestAmt','EarnedIncomeCreditRtn','EarnedIncomeCreditAmt', \\\n",
+    "          'TotalTaxRtn','TotalTaxAmt','ScheduleCTotalRtn','ScheduleCTotalScheduleC','ScheduleFTotalRtn','ScheduleFTotalScheduleF',\\\n",
+    "          'ScheduleARtn','ScheduleAAmt'\n",
+    "          ]\n",
+    "irsdata.columns= irsCol #assign column names to dataframe\n",
+    "chars_to_remove = ['*', '**', '--',',']\n",
+    "for col in irsdata.columns: #clean up data by removing non numeric characters\n",
+    "    irsdata[col] = irsdata[col].str.translate(None, ''.join(chars_to_remove))\n",
+    "\n",
+    "zipcode = pd.read_csv('./DataPfiles/us_postal_codes.csv')\n",
+    "calzipcode = zipcode[zipcode.State == 'California']\n",
+    "# print irsdata.columns\n",
+    "# print calzipcode.columns\n",
+    "# print irsdata.ZipCode\n",
+    "irsdata['ZipCode'] = irsdata['ZipCode'].str.strip()  #strip white space in the cell\n",
+    "print sum(irsdata['ZipCode'].isin(calzipcode['Postal Code'].apply(int).apply(str)))  #match the rows in irsdata with calzipcode\n",
+    "irsdata1998 = irsdata[irsdata['ZipCode'].isin(calzipcode['Postal Code'].apply(int).apply(str))]\n",
+    "irsdata1998['AverageAGI'] = irsdata1998.AGI.astype(int) #/ irsdata1998['NumberOfReturns'])\n",
+    "irsdata1998['NumberOfReturns'] = irsdata1998['NumberOfReturns'].astype(int)\n",
+    "irsdata1998['AverageAGI'] = irsdata1998['AverageAGI'] * 1000 / irsdata1998.NumberOfReturns\n",
+    "\n",
+    "### merge IRS data with zipcode price data\n",
+    "\n",
+    "dfPredictZipCode"
    ]
   },
   {
@@ -1290,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
@@ -1635,7 +1674,7 @@
        "[225 rows x 1 columns]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1648,6 +1687,28 @@
     "# type(selectedZipCodes[selectedZipCodes[0] == True])\n",
     "dfselectedZipCodes = pd.DataFrame(selectedZipCodes[selectedZipCodes[0] == True])\n",
     "dfselectedZipCodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(225, 1)"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfselectedZipCodes.shape"
    ]
   }
  ],
